# CrewAI---Cadastro

./: .gitignore  README.md  pyproject.toml
reports/: relatorio_crew_2025-05-18_235349.md
src/cadastro_crew/: agents.py  main.py
src/cadastro_crew/config/: tasks.yaml
src/cadastro_crew/tools/: knowledge_base_query_tool.py  llama_cloud_parsing_tool.py  supabase_document_tool.py
