[project]
name = "cadastro_crew"
version = "0.1.0"
description = "cadastro_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
cadastro_crew = "cadastro_crew.main:run"
run_crew = "cadastro_crew.main:run"
train = "cadastro_crew.main:train"
replay = "cadastro_crew.main:replay"
test = "cadastro_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
